# Rwig

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
patch/: .gitignore  Cargo.toml
patch/src/: com.rs  lib.rs
patch/src/audio/: endpoint.rs
patch/src/detours/: audio_client_detours.rs  detours.rs  mod.rs  render_client_detours.rs  vtable.rs
patch/src/ipc/: channels.rs  handshake.rs  listener.rs  message.rs  mod.rs
patch/src/utils/: audio_utils.rs  mod.rs  string_utils.rs  win_types.rs
src/: lib.rs
src/capture/: capture_instance.rs  mod.rs
src/common/: mod.rs
src/common/audio/: format.rs
src/common/ipc/: message.rs
src/common/utils/: error.rs  mod.rs  pointer_width.rs  process_open.rs
src/hook/: compatibility_info.rs  eject.rs  inject.rs  injector.rs  mod.rs  payload.rs
src/ipc/: handshake.rs  mod.rs  remote_call.rs
src/stream/: mod.rs  stream.rs
