[package]
name = "patch"
version = "0.1.0"
edition = "2021"
rust-version = "1.64.0"

[lib]
name = "patch"
crate-type = ["cdylib"]

[dependencies]
detour = "0.8.0"
ipc-channel = "0.16.0"
lazy_static = "1.4.0"
widestring = "0.5.1"
dll-syringe = { version = "0.13.1", features = ["into-x86-from-x64", "payload-utils"] }
once_cell = "1.13.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.32"

[dependencies.windows]
version = "0.38.0"
features = [
    "alloc",
    "Data_Xml_Dom",
    "implement",
    "Win32_Devices_Properties",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console"
]